syntax = "proto3";
package channels;

service Channels {
  rpc GetChannels (GetChannelsRequest) returns (GetChannelsResponse);
  // unable to name this 'GetChannel' because it's already used by the stub
  rpc GetChannelData (GetChannelDataRequest) returns (GetChannelDataResponse);
  rpc OpenChannel (OpenChannelRequest) returns (OpenChannelResponse);
  rpc CloseChannel (CloseChannelRequest) returns (CloseChannelResponse);
}

message GetChannelsRequest {}

message GetChannelsResponse {
  repeated string channels = 1;
}


message GetChannelDataRequest {
  string channel_id = 1;
}

message GetChannelDataResponse {
  enum State {
    UNKNOWN = 0;
    UNINITIALISED = 1;
    FUNDED = 2;
    OPEN = 3;
    PENDING = 4;
  }

  State state = 1;
  string balance = 2;
}


message OpenChannelRequest {
  string peer_id = 1;
  string amount = 2;
}

message OpenChannelResponse {
  string channel_id = 1;
}


message CloseChannelRequest {
  string channel_id = 1;
}

message CloseChannelResponse {
  string channel_id = 1;
}