syntax = "proto3";
package ping;

service Settings {
  // update setting on the fly without requiring a restart
  rpc UpdateSettings (UpdateSettingsRequest) returns (UpdateSettingsResponse);
}

message UpdateSettingsRequest {
  bool is_using_cover_traffic = 1;
  repeated string bootstrap_servers = 2;
}

message UpdateSettingsResponse {
  // milliseconds
  int32 latency = 1;
}
